--- a/rust_link_clib_example.spec.in
+++ b/rust_link_clib_example.spec.in
@@ -66,7 +66,7 @@ rm -rf $RPM_BUILD_ROOT
 %defattr (-,root,root)
 
 %files
-%{_libdir}/libosnamelib.so
+%{_libdir}/librust_link_clib_example.so
 
 
 
