Remove debug_package
With Fedora release 27 things break without this small spec file change.

Signed-off-by: Owen Synge <osynge@googlemail.com>

--- a/rust_link_clib_example.spec.in
+++ b/rust_link_clib_example.spec.in
@@ -20,7 +20,7 @@ If it fails to find suitable scripts you should specify some minium script.
 When launching whenenv, always specify the PRODUCT environment variable. The
 components of the build are isolated and reusable.
 
-
+%global debug_package %{nil}
 
 #
 # Prep
